fix check value + add page Support + fix UI

--- a/public/index.html
+++ b/public/index.html
@@ -50,5 +50,13 @@
         fjs.parentNode.insertBefore(js, fjs);
       })(document, "script", "facebook-jssdk");
     </script>
+    <!-- comment page suport  -->
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v16.0&appId= 1620897148361329&autoLogAppEvents=1"
+      nonce="7UFGUVHm"
+    ></script>
   </body>
 </html>
