--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,8 @@
       async
       defer
       crossorigin="anonymous"
-      src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v16.0&appId= 1620897148361329&autoLogAppEvents=1"
-      nonce="7UFGUVHm"
+      src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v16.0&appId=1620897148361329&autoLogAppEvents=1"
+      nonce="XqupZ2k7"
     ></script>
   </body>
 </html>
